🚧 admin live cycle QRcode
